# simple-token-language-server

./: Cargo.toml  README.md  other.js  package-lock.json  package.json  test.js
.helix/: languages.toml
src/: backend.rs  main.rs  source_file.rs  spell.rs  state.rs
