[package]
name = "simple-token-language-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = """
A simple LSP that tokenizes all open files and provides all words as completions.
Useful for prose, of languages that use strings like enums (eg: typescript, javascript)
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.19.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
regex = "1.10.0"
itertools = "0.11.0"
